force-app/main/default/objects/Contact/fields/Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_Source__c</fullName>
    <label>Primary Income Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child support</fullName>
            </value>
            <value>
                <fullName>No income</fullName>
            </value>
            <value>
                <fullName>Signed Statement</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
            <value>
                <fullName>SSI or SSDI</fullName>
            </value>
            <value>
                <fullName>TAFDC (welfare)</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Wages/salary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>