force-app/main/default/objects/Contact/fields/Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Intake_Date__c</fullName>
    <inlineHelpText>For EOC/TS, this is the date the Client fills out the Intake form (set one-time for TS, and updated yearly for EOC).  For UB, this is the date of first service.</inlineHelpText>
    <label>Intake Date</label>
    <type>Date</type>
</CustomField>