force-app/main/default/objects/Contact/fields/Intake_Form_Expire_Date_EOC__c.field-meta.xml
<CustomField>
    <fullName>Intake_Form_Expire_Date_EOC__c</fullName>
    <formula>IF(ISBLANK(Intake_Date__c),Date(1900,1,1),
IF (AND(OR(ISPICKVAL(Intake_Location__c, &#39;EOC Boston&#39;),ISPICKVAL(Intake_Location__c, &#39;EOC Brockton&#39;)), MONTH( Intake_Date__c) &lt;= 8),
Date(YEAR(Intake_Date__c), 8,31),
IF (OR(ISPICKVAL(Intake_Location__c, &#39;EOC Boston&#39;),ISPICKVAL(Intake_Location__c, &#39;EOC Brockton&#39;)), 
(Date(YEAR(Intake_Date__c) + 1,8,31)),Date(1900,1,1)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Form Expire Date EOC</label>
    <type>Date</type>
</CustomField>