force-app/main/default/objects/Contact/fields/Intake_Form_Footer_Line1__c.field-meta.xml
<CustomField>
    <fullName>Intake_Form_Footer_Line1__c</fullName>
    <description>This populates the location-specific footer (line 1) on the printed TS Intake Form (the Drawloop form pulls from this field)</description>
    <formula>IF( ISPICKVAL( Intake_Location__c, &quot;TS Boston&quot;),
&quot;Talent Search Main Office:  American Student Assistance · 100 Cambridge Street, Suite 1600· Boston, MA  02114 · 617.535.2244&quot;
,IF( ISPICKVAL( Intake_Location__c, &quot;TS Brockton&quot;),
&quot;Educational Talent Search Office: Brockton High School · 470 Forest Avenue Brockton, MA 02301 · 508.894.4214&quot;
,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Form Footer Line1</label>
    <type>Text</type>
</CustomField>