force-app/main/default/objects/Contact/fields/Intake_Form_Footer_Line2__c.field-meta.xml
<CustomField>
    <fullName>Intake_Form_Footer_Line2__c</fullName>
    <formula>IF( ISPICKVAL( Intake_Location__c, &quot;TS Boston&quot;),
&quot;Debbie Laguerre, Education Advisor	 	                                    Patrick White, Education Advisor	                             Rubens Dort, Education Advisor&quot;
,IF( ISPICKVAL( Intake_Location__c, &quot;TS Brockton&quot;),
&quot;Rose Arthur, Program Manager	 	                                     Ms. Mercado-Diatta, Education Advisor	                   Mr. St. Germain, Education Advisor&quot;
,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Form Footer Line2</label>
    <type>Text</type>
</CustomField>