force-app/main/default/objects/Contact/fields/Intake_Form_Title__c.field-meta.xml
<CustomField>
    <fullName>Intake_Form_Title__c</fullName>
    <formula>IF( ISPICKVAL( Intake_Location__c, &quot;EOC Boston&quot;), 
&quot;ASA/MassEdCo - EOC INTAKE FORM 2018-2019&quot; 
,IF( ISPICKVAL( Intake_Location__c, &quot;EOC Brockton&quot;), 
&quot;ASA - EOC INTAKE FORM 2018-2019&quot; 
,&quot;INTAKE FORM 2018-2019&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Form Title</label>
    <type>Text</type>
</CustomField>