force-app/main/default/objects/Contact/fields/International_School_Communication__c.field-meta.xml
<CustomField>
    <fullName>International_School_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to track whether or not the International School contact will receive mass email communications, similar to From The Desk Of emails.</description>
    <label>International School Communication</label>
    <type>Checkbox</type>
</CustomField>