force-app/main/default/objects/Contact/fields/INTID__c.field-meta.xml
<CustomField>
    <fullName>INTID__c</fullName>
    <label>INTID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>