force-app/main/default/objects/Contact/fields/Is_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is Student deceased?</inlineHelpText>
    <label>Is Deceased</label>
    <type>Checkbox</type>
</CustomField>