force-app/main/default/objects/Contact/fields/Is_Home_Parent_Guardian_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Is_Home_Parent_Guardian_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Home Parent/Guardian</label>
    <type>Checkbox</type>
</CustomField>