force-app/main/default/objects/Contact/fields/Is_Independent_Minor__c.field-meta.xml
<CustomField>
    <fullName>Is_Independent_Minor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Independent Minor</label>
    <type>Checkbox</type>
</CustomField>