force-app/main/default/objects/Contact/fields/Is_Media_Release_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Is_Media_Release_Authorized__c</fullName>
    <label>Is Media Release Authorized?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>