force-app/main/default/objects/Contact/fields/Is_Mobile_OK_to_Text__c.field-meta.xml
<CustomField>
    <fullName>Is_Mobile_OK_to_Text__c</fullName>
    <label>Is Mobile OK to Text?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>