force-app/main/default/objects/Contact/fields/Is_Mobile_Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Is_Mobile_Parent_Guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mobile Parent/Guardian</label>
    <type>Checkbox</type>
</CustomField>