force-app/main/default/objects/Contact/fields/Is_Mother_College_graduate__c.field-meta.xml
<CustomField>
    <fullName>Is_Mother_College_graduate__c</fullName>
    <label>Is Mother 4-yr. U.S. College grad?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (did not attend U.S. college)</fullName>
            </value>
            <value>
                <fullName>No (attended some U.S. college)</fullName>
            </value>
            <value>
                <fullName>No (completed 2-year U.S. college)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>