force-app/main/default/objects/Contact/fields/Is_Other_Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Is_Other_Parent_Guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Other Parent/Guardian</label>
    <type>Checkbox</type>
</CustomField>