force-app/main/default/objects/Contact/fields/Is_Text_ED_Participant__c.field-meta.xml
<CustomField>
    <fullName>Is_Text_ED_Participant__c</fullName>
    <label>Is Text ED Participant? (BPL only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>