force-app/main/default/objects/Contact/fields/Latest_Grant_Program__c.field-meta.xml
<CustomField>
    <fullName>Latest_Grant_Program__c</fullName>
    <description>A process should be put in place to set this field automatically each year (e.g. during UB/TS rollover process).  Users can also set it manually</description>
    <inlineHelpText>This field was set en batch to reflect the latest CPS Grant Program in which the Contact is a participant (as of 2016). You can use this field to search more easily on active program participants with a given current service year.</inlineHelpText>
    <label>Latest Grant Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOC Boston (2016-2017)</fullName>
            </value>
            <value>
                <fullName>EOC Boston (2017-2018)</fullName>
            </value>
            <value>
                <fullName>EOC Boston (2018-2019)</fullName>
            </value>
            <value>
                <fullName>EOC Boston (2019-2020)</fullName>
            </value>
            <value>
                <fullName>EOC Brockton (2016-2017)</fullName>
            </value>
            <value>
                <fullName>EOC Brockton (2017-2018)</fullName>
            </value>
            <value>
                <fullName>EOC Brockton (2018-2019)</fullName>
            </value>
            <value>
                <fullName>EOC Brockton (2019-2020)</fullName>
            </value>
            <value>
                <fullName>EOC MassEdCo (2016-2017)</fullName>
            </value>
            <value>
                <fullName>EOC MassEdCo (2017-2018)</fullName>
            </value>
            <value>
                <fullName>EOC MassEdCo (2018-2019)</fullName>
            </value>
            <value>
                <fullName>EOC MassEdCo (2019-2020)</fullName>
            </value>
            <value>
                <fullName>TS Boston (2016-2017)</fullName>
            </value>
            <value>
                <fullName>TS Boston (2017-2018)</fullName>
            </value>
            <value>
                <fullName>TS Boston (2018-2019)</fullName>
            </value>
            <value>
                <fullName>TS Boston (2019-2020)</fullName>
            </value>
            <value>
                <fullName>TS Brockton (2016-2017)</fullName>
            </value>
            <value>
                <fullName>TS Brockton (2017-2018)</fullName>
            </value>
            <value>
                <fullName>TS Brockton (2018-2019)</fullName>
            </value>
            <value>
                <fullName>TS Brockton (2019-2020)</fullName>
            </value>
            <value>
                <fullName>UB Brockton (2016-2017)</fullName>
            </value>
            <value>
                <fullName>UB Brockton (2017-2018)</fullName>
            </value>
            <value>
                <fullName>UB Brockton (2018-2019)</fullName>
            </value>
            <value>
                <fullName>UB Brockton (2019-2020)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>