force-app/main/default/objects/Contact/fields/Limited_English_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Limited_English_Proficiency__c</fullName>
    <inlineHelpText>Limited English Proficiency (at time of initial selection)</inlineHelpText>
    <label>Limited English Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>