force-app/main/default/objects/Contact/fields/Lobbying_Activity__c.field-meta.xml
<CustomField>
    <fullName>Lobbying_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lobbying Activity?</label>
    <type>Checkbox</type>
</CustomField>