force-app/main/default/objects/Contact/fields/Lobbying_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lobbying_Notes__c</fullName>
    <label>Lobbying Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>