force-app/main/default/objects/Contact/fields/Long_term_Goal__c.field-meta.xml
<CustomField>
    <fullName>Long_term_Goal__c</fullName>
    <label>Long-term Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>