force-app/main/default/objects/Contact/fields/LSR_Focus_Group__c.field-meta.xml
<CustomField>
    <fullName>LSR_Focus_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LSR Focus Group</label>
    <type>Checkbox</type>
</CustomField>