force-app/main/default/objects/Contact/fields/Marketing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Notes__c</fullName>
    <label>Marketing Notes:</label>
    <type>TextArea</type>
</CustomField>