force-app/main/default/objects/Contact/fields/Middle__c.field-meta.xml
<CustomField>
    <fullName>Middle__c</fullName>
    <description>Middle Initial</description>
    <label>MI</label>
    <length>2</length>
    <type>Text</type>
</CustomField>