force-app/main/default/objects/Contact/fields/Mobile_Phone_FOR_WF__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_FOR_WF__c</fullName>
    <label>Mobile Phone (FOR WF)</label>
    <type>Phone</type>
</CustomField>