force-app/main/default/objects/Contact/fields/MobilePhoneNumeric__c.field-meta.xml
<CustomField>
    <fullName>MobilePhoneNumeric__c</fullName>
    <description>This field is used by the CPS matching logic in sign-on advising and group event check-in. It is needed so that a mobile phone number match can be made on the numbers alone, without any formatting.</description>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone,&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;,&quot;,&quot;&quot;)</formula>
    <label>MobilePhoneNumeric</label>
    <type>Text</type>
</CustomField>