force-app/main/default/objects/Contact/fields/Mother_Guardian1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_Guardian1_Last_Name__c</fullName>
    <label>Parent/Guardian1 Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>