force-app/main/default/objects/Contact/fields/Mother_s_college__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_college__c</fullName>
    <label>Mother&#39;s college</label>
    <length>255</length>
    <type>Text</type>
</CustomField>