force-app/main/default/objects/Contact/fields/Other_Academic_Need__c.field-meta.xml
<CustomField>
    <fullName>Other_Academic_Need__c</fullName>
    <label>Other Academic Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low educational aspirations</fullName>
            </value>
            <value>
                <fullName>Lack of opportunity, support, or guidance</fullName>
            </value>
            <value>
                <fullName>Lack of career goals and/or accurate info</fullName>
            </value>
            <value>
                <fullName>Limited English proficiency</fullName>
            </value>
            <value>
                <fullName>Low confidence/self-esteem/social skills</fullName>
            </value>
            <value>
                <fullName>Low-income community</fullName>
            </value>
            <value>
                <fullName>Rural isolation</fullName>
            </value>
            <value>
                <fullName>Interest in careers in math or science</fullName>
            </value>
            <value>
                <fullName>Diagnosed learning disability</fullName>
            </value>
            <value>
                <fullName>Low GPA and/or achievement test scores</fullName>
            </value>
            <value>
                <fullName>More than one</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>