force-app/main/default/objects/Contact/fields/Other_Phone_FOR_WF__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_FOR_WF__c</fullName>
    <label>Other Phone (FOR WF)</label>
    <type>Phone</type>
</CustomField>