force-app/main/default/objects/Contact/fields/Other_Programs__c.field-meta.xml
<CustomField>
    <fullName>Other_Programs__c</fullName>
    <inlineHelpText>This is related to Statement of needs</inlineHelpText>
    <label>Other Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>