force-app/main/default/objects/Contact/fields/Pardot_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures the Opt Out request from a Pardot campaign.</description>
    <inlineHelpText>This field captures the Opt Out request from a Pardot campaign.</inlineHelpText>
    <label>Pardot Opt Out</label>
    <type>Checkbox</type>
</CustomField>