force-app/main/default/objects/Contact/fields/Parent_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Signature_Date__c</fullName>
    <label>Parent Signature Date</label>
    <type>Date</type>
</CustomField>