force-app/main/default/objects/Contact/fields/Participants_in_2011_12_postsecondary__c.field-meta.xml
<CustomField>
    <fullName>Participants_in_2011_12_postsecondary__c</fullName>
    <description>THIS FIELD SHOULD NOT BE USED AND CAN BE DELETED.</description>
    <formula>DATE(VALUE(TEXT(Post_Secondary_Ed_Enrollment_Cohort__c)) + 6,1,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participants in 2011-12 postsecondary</label>
    <type>Date</type>
</CustomField>