force-app/main/default/objects/Contact/fields/Participants_Name_Change_Optional__c.field-meta.xml
<CustomField>
    <fullName>Participants_Name_Change_Optional__c</fullName>
    <label>Participant’s Name Change (Optional)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>