force-app/main/default/objects/Contact/fields/Permanent_Resident_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Resident_ID_Text__c</fullName>
    <label>Permanent Resident ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>