force-app/main/default/objects/Contact/fields/Permanent_Resident_ID_Verified__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Resident_ID_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent Resident ID Verified</label>
    <type>Checkbox</type>
</CustomField>