force-app/main/default/objects/Contact/fields/Post_Secondary_Ed_Enrollment_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Post_Secondary_Ed_Enrollment_Cohort__c</fullName>
    <description>This is used by Upward Bound and should only appear on the Upward Bound Page Layout.</description>
    <inlineHelpText>This is used by Upward Bound.</inlineHelpText>
    <label>Postsec Education Enrollment Cohort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>2009</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>9999</fullName>
            </value>
            <value>
                <fullName>8888</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>