force-app/main/default/objects/Contact/fields/Post_Secondary_Ins_1st_Attended__c.field-meta.xml
<CustomField>
    <fullName>Post_Secondary_Ins_1st_Attended__c</fullName>
    <inlineHelpText>School Code for Post Secondary Institution First Attended.</inlineHelpText>
    <label>Post Secondary Ins 1st Attended</label>
    <length>100</length>
    <type>Text</type>
</CustomField>