force-app/main/default/objects/Contact/fields/Post_Secondary_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Post_Secondary_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It&#39;s unclear how CPS users plan to use and set this field (since tracking can be determined by the cohort year and Objective E value recorded on Campaign Member). Until this is determined, this field should not be included on any page layout.</description>
    <label>Post Secondary Tracking</label>
    <type>Checkbox</type>
</CustomField>