force-app/main/default/objects/Contact/fields/Preferred_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Type__c</fullName>
    <label>Preferred Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>