force-app/main/default/objects/Contact/fields/Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language__c</fullName>
    <label>Primary Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French-Creole</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Nepali</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>